# wheel_city_ai2

./: .env  .gitignore  Readme.md  requirements.txt  run.sh
bbox_images/: data12.jpg:Zone.Identifier
gemini/: run.py
results/: result.json  result_20250925_173340.json  result_20250926_000702.json
runner/: Cargo.toml
runner/src/: main.rs
yolov8/: balance_dataset.py  labels.cache  prepare_dataset.py  run.py  train.py
yolov8/labels/: 000000013.txt  000000025.txt  000000029.txt  000000094.txt  000000108.txt  000000191.txt  000000192.txt  000000202.txt  000000249.txt  000000304.txt  000000392.txt  000000408.txt  000000453.txt  000000455.txt  000000520.txt  000000587.txt  000000606.txt  000000618.txt  000000632.txt  000000640.txt  000000690.txt  000000691.txt  000000703.txt  000000704.txt  000000710.txt  000000716.txt  000000733.txt  000000771.txt  000000780.txt  000000793.txt  000000794.txt  000000804.txt  000000837.txt  000000865.txt  000000893.txt  000000907.txt  000000910.txt  000000932.txt  000000948.txt  000000981.txt  (+3309 more)
yolov8/train_result/ver1/: args.yaml  results.csv
yolov8/train_result/ver12/: args.yaml
yolov8/train_result/ver13/: args.yaml
yolov8/train_result/ver14/: args.yaml  results.csv
