[package]
name = "wheel_city_ai2_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rfd 최신은 mime_guess2 2.3.x(edition2024)를 끌어옵니다 → 0.13으로 고정
rfd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
